[package]
name = "mpdheart"
description = "spread love around your library ♡"
authors = ["fawn <fawn@rinici.de>"]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fawni/mpdheart"
categories = ["command-line-utilities"]
keywords = ["mpd", "lastfm"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
dirs = "5.0.1"
md5 = "0.7.0"
mpd = "0.1.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
ureq = { version = "2.9.6", features = ["json"] }
