[package]
name = "mpdheart"
description = "spread love around your library ♡"
authors = ["fawn <fawn@rinici.de>"]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fawni/mpdheart"
categories = ["command-line-utilities"]
keywords = ["mpd", "lastfm"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
md5 = "0.7.0"
mpd = "0.1.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.21"
ureq = { version = "3.0.11", features = ["json"] }
